# cmsis-device-h5

./: CMakeLists.txt
